syntax = "proto3";

import "core.proto";
import "plato/generic.proto";
import "plato/object.proto";
import "buf/validate/validate.proto";

package plato;

option go_package = "plato/api/proto";

service PlatoDailyGameService {
  rpc GetDetailDailyGameById(DailyGameIdRequest) returns (DetailDailyGameResponse) {}

  rpc GetModeDailyGameById(ModeIdRequest) returns (ModeDailyGameResponse) {} // Player
  rpc GetPublicDailyGame(ModeIdRequest) returns (PublicDailyGameResponse) {} // Player
  rpc AttemptAnswer(AttemptAnswerRequest) returns (AttemptAnswerResponse) {} // Player
  rpc AttemptHistory(DailyGameIdRequest) returns (AttemptHistoryResponse) {} // Player
}

message ModeDailyGameResponse {
  core.BaseResponse base = 1;
  Mode mode = 2;
  int32 daily_game_id = 3;
}

message PublicDailyGameResponse {
  core.BaseResponse base = 1;
  PublicDailyGame public_daily_game = 2;
}

message DetailDailyGameResponse {
  core.BaseResponse base = 1;
  DetailDailyGame detail_daily_game = 2;
}

message AttemptAnswerRequest {
  core.BaseRequest base = 1 [(buf.validate.field).required = true];
  int32 daily_game_id = 2;
  int32 answer_id = 4;
}

message AttemptAnswerResponse {
  core.BaseResponse base = 1;
  AttemptDetailAnswer attempt_detail_answer = 3;
  repeated Clue clues = 4;
}

message AttemptHistoryResponse {
  core.BaseResponse base = 1;
  repeated AttemptDetailAnswer attempt_detail_answers = 2;
  repeated Clue clues = 5;
}